--- a/index.html
+++ b/index.html
@@ -1,20 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Mauricio Soria">
     <meta name="keywords" content="Javascript,practicas">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-<main>
-    
-</main>
+    <header>
+        <nav>
+
+        </nav>
+    </header>
+    <main>
+        <h1 class="text-center">Bienvenido!</h1>
+        <div id="formulario">
+            <h3 class="ms-2"><b> Ingrese sus datos para conocer sus caracteristicas :</b></h3>
+            <form>
+                <div class="ms-3 mb-3">
+                    <label for="inputNombre" class="form-label mt-2">Nombre</label>
+                    <input type="nombre" class="form-control" id="inputNombre" aria-describedby="nombre">
+                </div>
+                <div class="ms-3 mb-3">
+                    <label for="inputEdad" class="form-label mt-2">Edad</label>
+                    <input type="edad" class="form-control" id="inputEdad">
+                </div>
+                <div class="ms-3 mb-3">
+                    <label for="inputDni" class="form-label mt-2">D.N.I</label>
+                    <input type="dni" class="form-control" id="inputDni">
+                </div>
+                <div class="ms-3 mb-3">
+                    <label for="inputSexo" class="form-label mt-2">Sexo</label>
+                    <input type="sexo" class="form-control" id="inputSexo">
+                </div>
+                <div class="ms-3 mb-3">
+                    <label for="inputPeso" class="form-label mt-2">Peso</label>
+                    <input type="peso" class="form-control" id="inputPeso">
+                </div>
+                <div class="ms-3 mb-3">
+                    <label for="inpuitAltura" class="form-label mt-2">Altura</label>
+                    <input type="altura" class="form-control" id="inputAltura">
+                </div>
+                <div class="ms-3 mb-3">
+                    <label for="inputAñoNac" class="form-label mt-2">Año de Nacimiento</label>
+                    <input type="añoNac" class="form-control" id="inputAñoNac">
+                </div>
+                <button id="enviar" onclick="" class="btn btn-primary ms-3">Enviar</button>
+            </form>
+        </div>
+        <div class="muestra">
+        <h3 id=""></h3>
+        <h3 id=""></h3>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script src="./js/Logic.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
+<script src="./js/Logic.js"></script>
+
 </html>
