Solucionado problema de responsive design

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <main>
         <h1 class="text-center">Bienvenido!</h1>
-        <div id="formulario">
+        <div id="formulario" class="container-fluid">
             <h3 class="ms-2"><b> Ingrese sus datos para conocer sus caracteristicas :</b></h3>
             <form>
                 <div class="ms-3 mb-3">
