--- a/index.html
+++ b/index.html
@@ -10,15 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>taxonomia de generaciones</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-
-        </nav>
-    </header>
     <main>
         <h1 class="text-center">Bienvenido!</h1>
         <div id="formulario" class="container-fluid">
@@ -60,8 +55,8 @@
         <h3 id=""></h3>
         </div>
     </main>
-    <footer>
-
+    <footer class="py-5 bg bg-dark text-center text-light">
+        <p>&copy; Todos los derechos reservados - MauricioSor</p>
     </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
